@@ -23,43 +23,43 @@ install:
 
 hangdefects:
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof with no arguments hangs" >> output
-	@cimmof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl with no arguments hangs" >> output
+	@cimmofl >> $(RESULTFILE) $(REDIRECTERROR)
 
 defects:
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -R. Char16.mof" >> $(RESULTFILE)
-	@cimmof $(NAMESPACE) -R. Char16.mof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -R. Char16.mof" >> $(RESULTFILE)
+	@cimmofl $(NAMESPACE) -R. Char16.mof >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -E InvalidMof1.mof - InvalidQualifier" >> $(RESULTFILE)
-	@cimmof -E InvalidMof1.mof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -E InvalidMof1.mof - InvalidQualifier" >> $(RESULTFILE)
+	@cimmofl -E InvalidMof1.mof >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -E ValidMof2.mof" >> $(RESULTFILE)
-	@cimmof -E ValidMof2.mof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -E ValidMof2.mof" >> $(RESULTFILE)
+	@cimmofl -E ValidMof2.mof >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -xml ValidMof2.mof" >> $(RESULTFILE)
-	@cimmof --xml ValidMof1.mof >> $(TMPFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -xml ValidMof2.mof" >> $(RESULTFILE)
+	@cimmofl --xml ValidMof1.mof >> $(TMPFILE) $(REDIRECTERROR)
 
 tests:
 	@$(RM) $(RESULTFILE)
 	@$(RM) $(TMPFILE)
 	@$(RMDIRHIER) ./repository
-	@cimmof $(NAMESPACE) -R. -I$(MOF_PATH) $(MOF_PATH)/CIM_Core25.mof
+	@cimmofl $(NAMESPACE) -R. -I$(MOF_PATH) $(MOF_PATH)/CIM_Core25.mof
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -xml ValidMof1.mof" >> $(RESULTFILE)
-	@cimmof --xml ValidMof1.mof >> $(TMPFILE) 
+	@$(ECHO) "cimmofl -xml ValidMof1.mof" >> $(RESULTFILE)
+	@cimmofl --xml ValidMof1.mof >> $(TMPFILE) 
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -E ValidMof1.mof" >> $(RESULTFILE)
-	@cimmof -E ValidMof1.mof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -E ValidMof1.mof" >> $(RESULTFILE)
+	@cimmofl -E ValidMof1.mof >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -R. ValidMof1.mof" >> $(RESULTFILE)
-	@cimmof $(NAMESPACE) -R. ValidMof1.mof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -R. ValidMof1.mof" >> $(RESULTFILE)
+	@cimmofl $(NAMESPACE) -R. ValidMof1.mof >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -xml ValidMof2.mof" >> $(RESULTFILE)
-	@cimmof --xml ValidMof2.mof >> $(TMPFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -xml ValidMof2.mof" >> $(RESULTFILE)
+	@cimmofl --xml ValidMof2.mof >> $(TMPFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -R. ValidMof2.mof" >> $(RESULTFILE)
-	@cimmof $(NAMESPACE) -R. ValidMof2.mof >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -R. ValidMof2.mof" >> $(RESULTFILE)
+	@cimmofl $(NAMESPACE) -R. ValidMof2.mof >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(MAKE) -i -s tests_ignoreerror
 	$(COMPARERESULTS)
 	@$(ECHO) +++ Test Passed +++
@@ -67,8 +67,8 @@ tests:
 
 tests_ignoreerror:
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof -h" >> $(RESULTFILE)
-	@cimmof -h >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl -h" >> $(RESULTFILE)
+	@cimmofl -h >> $(RESULTFILE) $(REDIRECTERROR)
 	@$(ECHO) " " >> $(RESULTFILE)
-	@$(ECHO) "cimmof --help" >> $(RESULTFILE)
-	@cimmof --help >> $(RESULTFILE) $(REDIRECTERROR)
+	@$(ECHO) "cimmofl --help" >> $(RESULTFILE)
+	@cimmofl --help >> $(RESULTFILE) $(REDIRECTERROR)
