@@ -1,24 +1,24 @@
  
-cimmof -xml ValidMof1.mof
+cimmofl -xml ValidMof1.mof
  
-cimmof -E ValidMof1.mof
+cimmofl -E ValidMof1.mof
  
-cimmof -R. ValidMof1.mof
+cimmofl -R. ValidMof1.mof
  
-cimmof -xml ValidMof2.mof
+cimmofl -xml ValidMof2.mof
  
-cimmof -R. ValidMof2.mof
+cimmofl -R. ValidMof2.mof
  
-cimmof -h
+cimmofl -h
 
-MofCompiler version 1.0.10
+MofCompiler version 1.1.00
 
 Usage: cimmof -hEw -Ipath -Rrepository -ffile
   -h, --help -- show this help.
   -E -- syntax check only.
   -w -- suppress warnings.
-  -Rrepository -- specify the repository path.
-  --CIMRepository=repository -- specify repository path.
+  -Rrepository -- specify the repository path (cimmofl) or hostname:portnumber (cimmof)
+  --CIMRepository=repository -- specify repository path or hostname:portnumber.
   -Ipath -- specify an include path.
   -ffile -- specify file containing a list of MOFs to compile.
  --file=file -- specify file containing list of MOFs.
@@ -27,16 +27,16 @@ Usage: cimmof -hEw -Ipath -Rrepository -ffile
  --xml -- output XML only, to stdout.  Do not update repository.
  --trace or --trace=ttracefile -- trace to file (default to stdout).
  
-cimmof --help
+cimmofl --help
 
-MofCompiler version 1.0.10
+MofCompiler version 1.1.00
 
 Usage: cimmof -hEw -Ipath -Rrepository -ffile
   -h, --help -- show this help.
   -E -- syntax check only.
   -w -- suppress warnings.
-  -Rrepository -- specify the repository path.
-  --CIMRepository=repository -- specify repository path.
+  -Rrepository -- specify the repository path (cimmofl) or hostname:portnumber (cimmof)
+  --CIMRepository=repository -- specify repository path or hostname:portnumber.
   -Ipath -- specify an include path.
   -ffile -- specify file containing a list of MOFs to compile.
  --file=file -- specify file containing list of MOFs.
