@@ -32,6 +32,8 @@ TAG: Version_1_09.
 
 4. (DME) 7 April 2002 Added support for HPUX running on IA64 hardware. 
 
+5. (DME) 7 April 2002 Update master result file for MOF Compiler CLI tests.
+
 ========================================================================
 
 Version 1.08 working towards 1.1 - Started 27 March 2002
